--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -31,20 +31,26 @@
 <div class="container">
     <form>
         <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="email">Email</label>
-                <input type="input" class="form-control" id="email" placeholder="email">
+            <div class="form-group col-md-12">
+                <label for="userId">사용자 아이디</label>
+                <input type="input" class="form-control" id="userId" placeholder="사용자 아이디">
             </div>
-            <br>
-            <div class="form-group col-md-6">
+            <br/>
+            <div class="form-group col-md-12">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="password">
+                <input type="password" class="form-control" id="password" placeholder="비밀번호">
             </div>
-            <br>
-            <div class="form-group col-md-6">
-                <label for="username">Username</label>
+            <br/>
+            <div class="form-group col-md-12">
+                <label for="username">이름</label>
                 <input type="input" class="form-control" id="username" placeholder="username">
             </div>
+            <br/>
+            <div class="form-group col-md-12">
+                <label for="username">이메일</label>
+                <input type="input" class="form-control" id="email" placeholder="이메일">
+            </div>
+            <br/>
         </div>
         <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
