--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -11,6 +11,7 @@
     <title>Hello, world!</title>
 </head>
 <body>
+<br>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">vividswan</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,26 +30,26 @@
     </div>
 </nav>
 <div class="container">
-    <form>
+    <form action="/create" method="post">
         <div class="form-row">
             <div class="form-group col-md-12">
                 <label for="userId">사용자 아이디</label>
-                <input type="input" class="form-control" id="userId" placeholder="사용자 아이디">
+                <input type="input" class="form-control" name="userId" id="userId" placeholder="사용자 아이디">
             </div>
             <br/>
             <div class="form-group col-md-12">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="비밀번호">
+                <input type="password" class="form-control" name="password" id="password" placeholder="비밀번호">
             </div>
             <br/>
             <div class="form-group col-md-12">
                 <label for="username">이름</label>
-                <input type="input" class="form-control" id="username" placeholder="username">
+                <input type="input" class="form-control" name="username" id="username" placeholder="username">
             </div>
             <br/>
             <div class="form-group col-md-12">
-                <label for="username">이메일</label>
-                <input type="input" class="form-control" id="email" placeholder="이메일">
+                <label for="email">이메일</label>
+                <input type="input" class="form-control" name="email" id="email" placeholder="이메일">
             </div>
             <br/>
         </div>
