--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse form-inline my-2 my-lg-0" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/form.html ">회원가입</a>
@@ -28,7 +28,10 @@
         </ul>
     </div>
 </nav>
-<h1>회원가입</h1>
+<br>
+<div class="container">
+    <h1>Welcome!</h1>
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
